tests/negative/abilities/with_wrong_structural_context.orng
// with_wrong_structural_context.orng:11:24: error: missing ability`My_Ability`
//         use_my_context()
//                       ^
// 
abilityMy_Ability = Int

abilityMy_Other_Context = Int

fn main() -> Int {
    with My_Other_Context(30) {
        use_my_context()
    }
}

fn use_my_context() -> Int with My_Ability {
    My_Ability
}